--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.17.1",
     "react": "16.0.0",
     "react-native": "0.50.4",
+    "react-native-fcm": "^11.3.1",
     "react-native-vector-icons": "^4.4.2",
     "react-navigation": "^1.0.0-beta.21",
     "react-redux": "^5.0.6",
